# triodia

./: .gitignore  Cargo.toml  README.md
src/: index.rs  load.rs  main.rs  server.rs  util.rs
web/: build.sh  package.json
