[package]
name = "triodia"
version = "0.1.0"
authors = ["Andrew Pendleton <andrew@mapbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geojson = "0.18.0"
anyhow = "1.0.28"
serde_json = "~1.0"
indexmap = "1.3.2"
static-bushes = { git = "https://github.com/apendleton/flatbush-rs.git", rev = "c4231f2e40c16be7b00bd48d2f8e444b159d6ef0" }
actix-http = "1.0.1"
actix-web = "2.0.0"
actix-files = "0.2.1"
env_logger = "0.7.1"
actix-rt = "1.1.1"
actix-server = "1.0.2"
tile-grid = "0.2.1"
mvt = "0.5.3"
protobuf = "=2.8.1"
actix-threadpool = "0.3.1"
flat_projection = "0.3.0"
ordered-float = "1.0.2"
itertools = "0.9.0"
serde = "1.0.110"
